WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135179
Array.concat() should work on runtime arrays too
https://bugs.webkit.org/show_bug.cgi?id=135179
Summary
Array.concat() should work on runtime arrays too
Mark Lam
Reported
2014-07-22 15:01:51 PDT
Patch coming.
Attachments
the patch.
(11.16 KB, patch)
2014-07-22 15:34 PDT
,
Mark Lam
mark.lam
: review-
Details
Formatted Diff
Diff
patch minus tabs
(11.32 KB, patch)
2014-07-22 15:47 PDT
,
Mark Lam
ggaren
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mark Lam
Comment 1
2014-07-22 15:02:25 PDT
<
rdar://problem/17544620
>
Mark Lam
Comment 2
2014-07-22 15:34:36 PDT
Created
attachment 235319
[details]
the patch.
WebKit Commit Bot
Comment 3
2014-07-22 15:36:19 PDT
Attachment 235319
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/jsc.cpp:288: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:289: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:290: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/JavaScriptCore/jsc.cpp:301: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:361: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:361: Missing space before { [whitespace/braces] [5] ERROR: Source/JavaScriptCore/jsc.cpp:362: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:363: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:365: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:366: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:367: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:373: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:373: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] ERROR: Source/JavaScriptCore/jsc.cpp:374: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:374: Missing space before { [whitespace/braces] [5] ERROR: Source/JavaScriptCore/jsc.cpp:375: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:377: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:378: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:378: Missing space before { [whitespace/braces] [5] ERROR: Source/JavaScriptCore/jsc.cpp:379: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:380: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:381: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:382: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/jsc.cpp:383: Tab found; better to use spaces [whitespace/tab] [1] ERROR: Source/JavaScriptCore/tests/stress/regexp-matches-array.js:2: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/regexp-matches-array.js:3: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/regexp-matches-array.js:4: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/regexp-matches-array.js:6: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/regexp-matches-array.js:7: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/regexp-matches-array.js:8: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/regexp-matches-array.js:9: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/regexp-matches-array.js:10: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/regexp-matches-array.js:11: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/runtime-array.js:2: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/runtime-array.js:3: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/runtime-array.js:5: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/runtime-array.js:6: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/runtime-array.js:7: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/runtime-array.js:8: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/runtime-array.js:9: Line contains tab character. [whitespace/tab] [5] ERROR: Source/JavaScriptCore/tests/stress/runtime-array.js:10: Line contains tab character. [whitespace/tab] [5] Total errors found: 41 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Lam
Comment 4
2014-07-22 15:37:20 PDT
Comment on
attachment 235319
[details]
the patch. Curses. Will remove tabs.
Mark Lam
Comment 5
2014-07-22 15:47:46 PDT
Created
attachment 235321
[details]
patch minus tabs
Geoffrey Garen
Comment 6
2014-07-22 21:02:41 PDT
Comment on
attachment 235321
[details]
patch minus tabs r=me
Mark Lam
Comment 7
2014-07-22 21:20:38 PDT
Thanks. Landed in
r171390
: <
http://trac.webkit.org/r171390
>.
Mark Hahnenberg
Comment 8
2014-07-23 07:21:36 PDT
(In reply to
comment #7
)
> Thanks. Landed in
r171390
: <
http://trac.webkit.org/r171390
>.
Did you look at the RegExpArray stuff too?
Brent Fulgham
Comment 9
2014-07-23 08:54:36 PDT
This introduced a build failure on Windows, since NO_RETURN_DUE_TO_CRASH is undefined. 1. I landed a build fix for this: <
http://trac.webkit.org/changeset/171393
> 2. I of course screwed up the change and had to land a follow-up: <
http://trac.webkit.org/changeset/171395
>
Mark Lam
Comment 10
2014-07-23 09:56:17 PDT
(In reply to
comment #8
)
> Did you look at the RegExpArray stuff too?
I believe you mean RegExpMatchesArray. Yes, we looked at it, and also added a test at Source/JavaScriptCore/tests/stress/regexp-matches-array.js for it.
Mark Hahnenberg
Comment 11
2014-07-23 10:25:37 PDT
(In reply to
comment #10
)
> (In reply to
comment #8
) > > Did you look at the RegExpArray stuff too? > > I believe you mean RegExpMatchesArray. Yes, we looked at it, and also added a test at Source/JavaScriptCore/tests/stress/regexp-matches-array.js for it.
Sweet! Just curious if there was also an issue there.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug